@@ -317,6 +317,7 @@ export(loo)
 export(loo_linpred)
 export(loo_predict)
 export(loo_predictive_interval)
+export(make_conditions)
 export(make_stancode)
 export(make_standata)
 export(marginal_effects)
